--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.1",
   "description": "Github profile README.md",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "vercel dev",
     "token": "tsc util/get-refresh-token.ts & node util/get-refresh-token.js"
@@ -18,27 +19,27 @@
   },
   "homepage": "https://github.com/guilyx/guilyx#readme",
   "dependencies": {
-    "@vercel/node": "^1.9.1",
-    "axios": "^0.21.2",
-    "chess-web-api": "^1.0.10",
-    "isomorphic-unfetch": "^3.0.0",
-    "node-fetch": "^2.6.7",
+    "@vercel/node": "^1.15.3",
+    "axios": "^0.27.2",
+    "chess-web-api": "^1.1.2",
+    "isomorphic-unfetch": "^3.1.0",
+    "node-fetch": "^3.2.4",
     "querystring": "^0.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "typescript": "^3.9.7",
-    "faunadb": "^2.14.2"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "typescript": "^4.7.2",
+    "faunadb": "^4.5.4"
   },
   "devDependencies": {
-    "@types/node": "^14.0.22",
-    "@types/react": "^16.9.42",
-    "@types/react-dom": "^16.9.8",
-    "@types/spotify-api": "0.0.5",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "open": "^7.2.1",
-    "prettier": "^2.0.5",
-    "dotenv": "^10.0.0"
+    "@types/node": "^17.0.36",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "@types/spotify-api": "0.0.16",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.3",
+    "open": "^8.4.0",
+    "prettier": "^2.6.2",
+    "dotenv": "^16.0.1"
   },
   "directories": {
     "example": "example"
