--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "name": "guilyx/guilyx",
-  "version": 2,
+  "name": "acr0l/acr0l",
+  "version": 1,
   "rewrites": [{ "source": "/(.*)", "destination": "/api/$1" }]
 }
