--- a/.github/workflows/update-timestats.yml
+++ b/.github/workflows/update-timestats.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          USERNAME: guilyx # optional, it will automatically use the username of the owner of the repository who's executing the workflow.
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          USERNAME: Acr0l # optional, it will automatically use the username of the owner of the repository who's executing the workflow.
           SHOW_OS: "False"
           SHOW_PROJECTS: "True"
           SHOW_PROFILE_VIEWS: "False"
