--- a/.github/workflows/update-gh-activity.yml
+++ b/.github/workflows/update-gh-activity.yml
@@ -2,14 +2,18 @@ name: update-gh-activity
 
 on:
   schedule:
-    - cron: '30 * * * *'
+    - cron: "*/30 * * * *"
+  workflow_dispatch:
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: Update repo's README with recent activity.
 
     steps:
       - uses: actions/checkout@v2
       - uses: jamesgeorge007/github-activity-readme@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
