--- a/.github/workflows/update-timestats.yml
+++ b/.github/workflows/update-timestats.yml
@@ -2,7 +2,7 @@ name: wakatime-stats
 
 on:
   schedule:
-    - cron: '30 16 * * *'
+    - cron: "30 16 * * *"
   workflow_dispatch:
 
 jobs:
@@ -13,11 +13,11 @@ jobs:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           USERNAME: Acr0l # optional, it will automatically use the username of the owner of the repository who's executing the workflow.
           SHOW_OS: "False"
           SHOW_PROJECTS: "True"
-          SHOW_PROFILE_VIEWS: "False"
+          SHOW_PROFILE_VIEWS: "True"
           SHOW_EDITORS: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_LOC_CHART: "False"
